# r-shellitems

./: Cargo.toml  README.md
.testdata/: BEEF0004_11Eh_001.lnk  shellist_$RGH5SXL_4Ch_20Fh.lnk  shellitem_0x1F_001_GUID_ONLY  shellitem_0x31_001  shellitem_0x32_001  shelllist_Copy of Metal Alloy List Research_4Ch_138h.lnk
examples/: extension_examples.rs  shellitem_examples.rs  shelllist_examples.rs
src/: errors.rs  extension_blocks.rs  file_entry_shell.rs  lib.rs  shellitem.rs  shelllist.rs  utils.rs
